base/agentgateway/httproute-llm.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm
  namespace: agentgateway-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway
    name: ai
    namespace: agentgateway-system
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    backendRefs:
    - name: openai
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
